loading and clearing cart when placing order

--- a/confirmation.html
+++ b/confirmation.html
@@ -8,7 +8,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/confirmation.css" rel="stylesheet">
@@ -20,6 +19,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/309152690f.js" crossorigin="anonymous"></script>
+    <script src="js/loading.js" type="module" defer></script>
+    <script src="js/confirmation.js" type="module" defer></script>
 </head>
 <body>
     <header>
@@ -42,13 +43,10 @@
         </nav>
     </header>
     <main class="main__content">
-        <nav class="nav-back breadcrumbs__content">
-            <a href="checkout.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
-       </nav>
         <section class="confirmation">
             <i class="fa-solid fa-circle-check confirmation-icon"></i>
             <h1 class="confirmation-heading">Thank You!</h1>
-            <p class="confirmation-text">Your order WY6547 has been registered. You will receive a confirmation on your email shortly.</p>
+            <p class="confirmation-text">Your order has been registered. You will receive a confirmation on your email shortly.</p>
         </section>
         <section class="continue-shopping__confirmation">
             <div class="continue-shopping__button">
