--- a/checkout.html
+++ b/checkout.html
@@ -20,7 +20,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/309152690f.js" crossorigin="anonymous"></script>
-    <script src="js/checkout.js" defer></script>
+    <script src="js/checkout.js" type="module" defer></script>
+    <script src="js/loading.js" type="module" defer></script>
 </head>
 <body>
     <header>
@@ -45,7 +46,11 @@
     <main class="main__content">
         <nav class="nav-back breadcrumbs__content">
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
-       </nav>
+        </nav>
+        <div class="loading">
+            <div class="spinner"></div>
+            <p>Loading...</p>
+        </div>
         <h1 class="h1-headings">Checkout</h1>
         <div class="cart-container"></div>
         <p class="total-price"></p>
