--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <link href="css/styles.css" rel="stylesheet">
         <link href="css/index.css" rel="stylesheet">
-        <link href="css/mens-jackets.css" rel="stylesheet">
         <link href="css/media.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +19,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/309152690f.js" crossorigin="anonymous"></script>
-        <script src="js/index.js" defer></script>
+        <script src="js/index.js" type="module" defer></script>
+        <script src="js/loading.js" type="module" defer></script>
     </head>
     <body>
         <header>
@@ -43,6 +43,10 @@
             </nav>
         </header>
         <main>
+            <div class="loading">
+                <div class="spinner"></div>
+                <p>Loading...</p>
+            </div>
             <select id="genderFilter">
                 <option value="all">All</option>
                 <option value="Female">Female</option>
