--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </nav>
         </header>
         <main>
+            <div class="alert-box"></div>
             <div class="loading">
                 <div class="spinner"></div>
                 <p>Loading...</p>
