--- a/checkout.html
+++ b/checkout.html
@@ -47,6 +47,7 @@
         <nav class="nav-back breadcrumbs__content">
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
         </nav>
+        <div class="alert-box"></div>
         <div class="loading">
             <div class="spinner"></div>
             <p>Loading...</p>
