--- a/product.html
+++ b/product.html
@@ -44,6 +44,7 @@
         </nav>
     </header>
     <main>
+        <div class="alert-box"></div>
         <div class="loading">
             <div class="spinner"></div>
             <p>Loading...</p>
