--- a/checkout.html
+++ b/checkout.html
@@ -43,6 +43,7 @@
             </section>
         </nav>
     </header>
+    
     <main class="main__content">
         <nav class="nav-back breadcrumbs__content">
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
@@ -56,8 +57,8 @@
         <div class="cart-container"></div>
         <p class="total-price"></p>
         <button class="clear-cart-button">Clear cart</button>
-        
     </main>
+    <div class="page-wrapper"></div>
     <footer>
         <section class="footer__content">
             <div>
