made changes on the product in cart on checkout page, and cart count in the header

--- a/checkout.html
+++ b/checkout.html
@@ -53,9 +53,12 @@
             <p>Loading...</p>
         </div>
         <h1 class="h1-headings">Checkout</h1>
-        <div class="cart-container"></div>
-        <p class="total-price"></p>
-        <button class="clear-cart-button">Clear cart</button>
+        <div class="checkout-content">
+            <div class="cart-container"></div>
+            <button class="clear-cart-button">Clear cart</button>
+            <p class="total-price"></p>
+        </div>
+        
     </main>
     <div class="page-wrapper"></div>
     <footer>
